Fix pagination and random create elements