@@ -1,9 +1,13 @@
 package com.rarcos.gesmerca.util;
 
+import com.github.javafaker.Faker;
 import com.rarcos.gesmerca.entity.Product;
+import com.rarcos.gesmerca.entity.Supplier;
 import com.rarcos.gesmerca.service.ProductService;
+import com.rarcos.gesmerca.service.SupplierService;
 
 import java.time.ZonedDateTime;
+import java.util.Locale;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.CommandLineRunner;
@@ -17,21 +21,31 @@ import org.springframework.stereotype.Component;
  */
 
 @Component
-@Order(2)
+@Order(4)
 public class CreateProducts implements CommandLineRunner {
 
     @Autowired
     ProductService productService;
 
+    @Autowired
+    SupplierService supplierService;
+
     @Override
     public void run(String... args) throws Exception {
-        Product product = new Product("Producto 1", "Descripción del producto 1", Long.valueOf(1),
-                "https://vps.rarcos.com:10449/storage/assets/img/products/a93607e8c26b715e4ed44e1c07da7299.png",
-                "https://vps.rarcos.com:10449/storage/assets/img/products/a93607e8c26b715e4ed44e1c07da7299_32x32.png",
-                "https://vps.rarcos.com:10449/storage/assets/img/products/a93607e8c26b715e4ed44e1c07da7299_64x64.png",
-                "https://vps.rarcos.com:10449/storage/assets/img/products/a93607e8c26b715e4ed44e1c07da7299_128x128.png",
-                (float) 72.85,
-                98, ZonedDateTime.now(), ZonedDateTime.now());
-        productService.save(product);
+        Faker faker = new Faker(new Locale("es-ES"));
+        for (int i = 1; i <= 100; i++) {
+            Long idSupplier = new Long(String.valueOf(faker.number().numberBetween(1, 50)));
+            Supplier supplier = supplierService.getOne(idSupplier).get();
+            Product product = new Product(faker.commerce().productName(),
+                    "Descripción del producto " + faker.commerce().productName(), supplier.getId(),
+                    "https://vps.rarcos.com:10449/storage/assets/img/products/a93607e8c26b715e4ed44e1c07da7299.png",
+                    "https://vps.rarcos.com:10449/storage/assets/img/products/a93607e8c26b715e4ed44e1c07da7299_32x32.png",
+                    "https://vps.rarcos.com:10449/storage/assets/img/products/a93607e8c26b715e4ed44e1c07da7299_64x64.png",
+                    "https://vps.rarcos.com:10449/storage/assets/img/products/a93607e8c26b715e4ed44e1c07da7299_128x128.png",
+                    Float.valueOf(faker.commerce().price().replace(',', '.')),
+                    98, ZonedDateTime.now(), ZonedDateTime.now());
+            productService.save(product);
+        }
+
     }
 }
